# leph_robot_stuff

./: README.md
leph_maths/: CMakeLists.txt  package.xml
leph_maths/include/leph_maths/: Angle.h  AutoRegressive.h  AxisAngle.h  Clamp.h  ControlDampedIntegral.hpp  ControlIntegral.hpp  ControlProportionalBarrier.hpp  Deadband.h  DiffKKTQuadProg.h  DifferentialDrive.hpp  Euler.h  FilterBacklash.hpp  FilterDifferentiator.hpp  FilterDifferentiator2.hpp  FilterElasticityPos.hpp  FilterElasticityVel.hpp  FilterEncoderDifferentiation.hpp  FilterExponential.hpp  FilterExponentialRotation.hpp  FilterIIR.hpp  FilterPoseCommand.hpp  IntegrateDOFVect.h  LinearRegression.hpp  PolyFit.hpp  Polynomial.hpp  Polytope.hpp  Pose2d.h  PoseCommandProcessing.hpp  RecursiveLeastSquares.hpp  Sign.h  Skew.h  SoftMax.h  Spline.hpp  SplineCubic.hpp  SplineLinear.hpp  SplineQuintic.hpp  Sylvester.h  TimeSeries.hpp  TrajectoryBangBangAcc.hpp
leph_maths/src/: DifferentialDrive.cpp  FilterPoseCommand.cpp  LinearRegression.cpp  PolyFit.cpp  Polynomial.cpp  Polytope.cpp  PoseCommandProcessing.cpp  RecursiveLeastSquares.cpp  Spline.cpp  SplineCubic.cpp  SplineLinear.cpp  SplineQuintic.cpp  Sylvester.cpp  TrajectoryBangBangAcc.cpp
leph_maths/test/: testAutoRegressive.cpp  testAxisAngle.cpp  testControllerProportionalBarrier.cpp  testDampedIntegral.cpp  testFilterPoseCommand.cpp  testFilters.cpp  testLinearRegression.cpp  testQPDiff.cpp  testRLS.cpp  testSoftMax.cpp  testSylvester.cpp  testTimeSeries.cpp  testTrajectory.cpp  testVelocityDifferentiation.cpp
leph_model/: CMakeLists.txt  package.xml
leph_model/include/leph_model/: ActuatorSEA.hpp  ForwardSimulation.hpp  InverseDynamics.hpp  InverseDynamicsSimplified.hpp  InverseKinematics.hpp  LegIKTalos.hpp  Model.hpp  ModelHumanoidFixed.hpp  MultiContactIKStaticID.hpp  PinocchioInterface.hpp  RBDLContactLCP.h  RBDLRootUpdate.h  SEIKOBimanual.hpp  SEIKOFloatingBase.hpp  SEIKOTalos.hpp  SEIKOTiago.hpp  SEIKOWrapper.hpp  TalosDOFs.h  TiagoDOFs.h
leph_model/src/: ActuatorSEA.cpp  ForwardSimulation.cpp  InverseDynamics.cpp  InverseDynamicsSimplified.cpp  InverseKinematics.cpp  LegIKTalos.cpp  Model.cpp  ModelHumanoidFixed.cpp  MultiContactIKStaticID.cpp  PinocchioInterface.cpp  RBDLContactLCP.cpp  RBDLRootUpdate.cpp  SEIKOBimanual.cpp  SEIKOFloatingBase.cpp  SEIKOTalos.cpp  SEIKOTiago.cpp  SEIKOWrapper.cpp
leph_model/test/: testCentroidal.cpp  testImportState.cpp  testJacobian.cpp  testModel.cpp  testPinocchio.cpp  testWrenchTransform.cpp
leph_plot/: CMakeLists.txt  package.xml
leph_plot/include/leph_plot/: Plot.hpp  PlotGlobal.hpp
leph_plot/src/: PlotGlobal.cpp
leph_plot/test/: testPlot.cpp  testStream.cpp
leph_utils/: CMakeLists.txt  package.xml
leph_utils/include/leph_utils/: BufferReaderWriter.hpp  Chrono.hpp  CircularBuffer.hpp  File.h  Filesystem.h  ImporterCSV.h  Random.hpp  Scheduling.h  SpaceMouse.hpp  String.h  Time.h  TimeSeriesBuffer.hpp  ViveTracking.hpp
leph_utils/src/: Chrono.cpp  Filesystem.cpp  SpaceMouse.cpp  ViveTracking.cpp
leph_utils/test/: testChrono.cpp  testFilesystem.cpp  testImporterCSV.cpp  testTimeSeriesBuffer.cpp
leph_viewer_rhio/: CMakeLists.txt  package.xml
leph_viewer_rhio/include/leph_viewer_rhio/: InterfaceCLI.hpp  TreeNode.hpp  TreeValue.hpp  WinBase.hpp  WinPlot.hpp  WinTree.hpp
leph_viewer_rhio/src/: InterfaceCLI.cpp  TreeNode.cpp  TreeValue.cpp  WinBase.cpp  WinPlot.cpp  WinTree.cpp
