<?xml version="1.0"?>
<package format="2">
    <name>leph_maths</name>
    <version>0.0.0</version>
    <description>
        Various maths tools
    </description>
    <maintainer email="leph.quentinrouxel@gmail.com">Quentin Rouxel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>leph_plot</depend>
    <depend>leph_utils</depend>
</package>
