<?xml version="1.0"?>
<package format="2">
    <name>leph_model</name>
    <version>0.0.0</version>
    <description>
        Wrapper around RBDL and Pinocchio model API along with
        model based computation and optimization
    </description>
    <maintainer email="leph.quentinrouxel@gmail.com">Quentin Rouxel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>urdf</depend>
    <depend>rbdl_catkin</depend>
    <depend>pinocchio</depend>
    <depend>leph_maths</depend>
    <depend>leph_plot</depend>
    <depend>leph_utils</depend>
    <depend>mobydrakelcp</depend>
</package>
