<?xml version="1.0"?>
<package format="2">
    <name>leph_plot</name>
    <version>0.0.0</version>
    <description>
        Interface for Gnuplot
    </description>
    <maintainer email="leph.quentinrouxel@gmail.com">Quentin Rouxel</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
</package>
